AUTOMAKE_OPTIONS = dist-bzip2 dist-zip
SUBDIRS = src intl po doc tests
docdir = $(prefix)/doc/$(PACKAGE)
EXTRA_DIST = ABOUT-NLS BUGS CREDITS HISTORY depcomp
doc_DATA = ABOUT-NLS BUGS COPYING CREDITS HISTORY INSTALL README TODO
MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess config.h.in \
config.sub configure depcomp install-sh missing mkinstalldirs
