dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/main.c)
AM_INIT_AUTOMAKE(steghide, 0.4.5)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_AWK
AC_PROG_LN_S

dnl GNU gettext
ALL_LINGUAS="de"
AM_GNU_GETTEXT

dnl Checks for libraries.
AC_CHECK_LIB(mhash, mhash_init)
AC_CHECK_LIB(dld, dld_init)
AC_CHECK_LIB(ltdl, lt_dlinit)
AC_CHECK_LIB(mcrypt, mcrypt_module_open, , , -lltdl)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(mcrypt.h mhash.h limits.h termios.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(tcgetattr)
AC_CHECK_FUNCS(tcsetattr)
AC_CHECK_FUNCS(strtoul)

AC_OUTPUT([Makefile doc/Makefile intl/Makefile po/Makefile.in src/Makefile])
