AM_CPPFLAGS = -I../intl -DLOCALEDIR=\"$(localedir)\"
bin_PROGRAMS = steghide
noinst_HEADERS = \
Arg.h Arguments.h \
AssertionFailed.h AuFile.h \
AuSampleValue.h AugmentingPathHeuristic.h \
BinaryIO.h BitString.h \
BmpFile.h BmpPaletteSampleValue.h \
BmpRGBSampleValue.h BmpSampleValue.h \
ColorPalette.h ConstructionHeuristic.h \
CvrStgFile.h CvrStgObject.h \
Edge.h EdgeIterator.h \
EmbData.h Embedder.h \
EncryptionAlgorithm.h EncryptionMode.h \
Extractor.h Graph.h \
GraphAccess.h JpegFile.h \
JpegSampleValue.h MCrypt.h \
MHash.h MHashKeyGen.h \
Matching.h Permutation.h \
RGBTriple.h RandomSource.h \
SampleOccurence.h SampleValue.h \
SampleValueOppositeNeighbourhood.h Session.h \
SteghideError.h Terminal.h \
Vertex.h VertexContent.h \
WavChunk.h WavChunkHeader.h \
WavChunkUnused.h WavFile.h \
WavFormatChunk.h WavPCMSampleValue.h \
common.h error.h \
jpegbase.h jpegentropycoded.h \
jpegframe.h jpegframehdr.h \
jpeghufftable.h jpegjfifapp0.h \
jpegrestart.h jpegscan.h \
jpegscanhdr.h jpegunusedseg.h \
msg.h wrapper_hash_set.h
steghide_SOURCES = \
Arg.cc Arguments.cc \
AssertionFailed.cc AuFile.cc \
AuSampleValue.cc AugmentingPathHeuristic.cc \
BinaryIO.cc BitString.cc \
BmpFile.cc BmpPaletteSampleValue.cc \
BmpRGBSampleValue.cc BmpSampleValue.cc \
ColorPalette.cc ConstructionHeuristic.cc \
CvrStgFile.cc Edge.cc \
EdgeIterator.cc EmbData.cc \
Embedder.cc EncryptionAlgorithm.cc \
EncryptionMode.cc Extractor.cc \
Graph.cc GraphAccess.cc \
JpegFile.cc JpegSampleValue.cc \
MCrypt.cc MHash.cc \
MHashKeyGen.cc Matching.cc \
Permutation.cc RGBTriple.cc \
RandomSource.cc SampleValue.cc \
SampleValueOppositeNeighbourhood.cc Session.cc \
SteghideError.cc Terminal.cc \
Vertex.cc VertexContent.cc \
WavChunk.cc WavChunkHeader.cc \
WavChunkUnused.cc WavFile.cc \
WavFormatChunk.cc WavPCMSampleValue.cc \
error.cc jpegbase.cc \
jpegentropycoded.cc jpegframe.cc \
jpegframehdr.cc jpeghufftable.cc \
jpegjfifapp0.cc jpegrestart.cc \
jpegscan.cc jpegscanhdr.cc \
jpegunusedseg.cc main.cc \
msg.cc
localedir = $(datadir)/locale
LIBTOOL = $(SHELL) libtool
MAINTAINERCLEANFILES = Makefile.in
